More Options and Brawler
Added Brawler preset.
Added Infinite Wing Smash mode, Fast Warps mode, and No Prologue mode.
Adjusted options layout to ease confusion.
Added Wanderer and Tourist extensions as options to website.
Added check counts to extension descriptions.
Added generation time as an output when using spoilers in Command Line.
Added $5000 chest to items list. (May or may not appear)
Changed how Maria First Meeting room spawns removing the need to change how time attack reads for it.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <span class="tooltip hidden">
                               <span>
                                 Relics and progression items may appear in
-                                rooms guarded by bosses.
+                                rooms guarded by bosses. 36 Check locations.
                               </span>
                             </span>
                           </span>
@@ -180,7 +180,7 @@
                             <span class="tooltip hidden">
                               <span>
                                 Add to guarded locations with more checks on
-                                left side of second castle.
+                                left side of second castle. 38 Check locations.
                               </span>
                             </span>
                           </span>
@@ -198,7 +198,45 @@
                             <span class="tooltip hidden">
                               <span>
                                 Relics and progression items may appear in
-                                place of equipment tiles.
+                                place of equipment tiles. 90 Check locations.
+                              </span>
+                            </span>
+                          </span>
+                        </label>
+                      </div>
+                      <div>
+                        <input id="extension-tourist"
+                                name="extension"
+                                type="radio"
+                                value="tourist">
+                        <label for="extension-tourist">
+                          Tourist
+                          <span class="tooltip-wrapper">
+                            <span class="tooltip-indicator">?</span>
+                            <span class="tooltip hidden">
+                              <span>
+                                Relics and progression items may appear in
+                                place of equipment tiles or in unique 
+                                locations in either castle. 103 Check locations.
+                              </span>
+                            </span>
+                          </span>
+                        </label>
+                      </div>
+                      <div>
+                        <input id="extension-wanderer"
+                                name="extension"
+                                type="radio"
+                                value="wanderer">
+                        <label for="extension-wanderer">
+                          Wanderer
+                          <span class="tooltip-wrapper">
+                            <span class="tooltip-indicator">?</span>
+                            <span class="tooltip hidden">
+                              <span>
+                                Relics and progression items may appear in
+                                place of <i>limited</i> equipment tiles or in unique
+                                locations in either castle. 69 Check locations.
                               </span>
                             </span>
                           </span>
@@ -272,7 +310,8 @@
                   <option value="dark">Dark</option>
                 </select>
               </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1"></div>
+              <div class="pure-u-1-2">
                 <input id="append-seed" type="checkbox">
                 <label for="append-seed">Append seed to filename
                   <span class="tooltip-wrapper">
@@ -287,7 +326,20 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1-2">
+                <input id="colorrando-mode" type="checkbox">
+                <label for="colorrando-mode">Color Rando mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Randomize various color palettes. Ex: Cape colors, gravity boots trails, hydrostorm.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1-2">
                 <input id="tournament-mode" type="checkbox">
                 <label for="tournament-mode">Tournament mode
                   <span class="tooltip-wrapper">
@@ -303,20 +355,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-1">
-                <input id="colorrando-mode" type="checkbox">
-                <label for="colorrando-mode">Color Rando mode
-                  <span class="tooltip-wrapper">
-                    <span class="tooltip-indicator">?</span>
-                    <span class="tooltip hidden">
-                      <span>
-                        Randomize various color palettes. Ex: Cape colors, gravity boots trails, hydrostorm.
-                      </span>
-                    </span>
-                  </span>
-                </label>
-              </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1-2">
                 <input id="magicmax-mode" type="checkbox">
                 <label for="magicmax-mode">Magic Max mode
                   <span class="tooltip-wrapper">
@@ -329,33 +368,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-1">
-                <input id="antifreeze-mode" type="checkbox">
-                <label for="antifreeze-mode">Anti-Freeze mode
-                  <span class="tooltip-wrapper">
-                    <span class="tooltip-indicator">?</span>
-                    <span class="tooltip hidden">
-                      <span>
-                        Remove screen freezes on level-up, relic and vessel acquisition.
-                      </span>
-                    </span>
-                  </span>
-                </label>
-              </div>
-              <div class="pure-u-1">
-                <input id="mypurse-mode" type="checkbox">
-                <label for="mypurse-mode">That's my purse! mode
-                  <span class="tooltip-wrapper">
-                    <span class="tooltip-indicator">?</span>
-                    <span class="tooltip hidden">
-                      <span>
-                        Prevents Death from stealing your gear.
-                      </span>
-                    </span>
-                  </span>
-                </label>
-              </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1-2">
                 <input id="accessibility-patches" type="checkbox">
                 <label for="accessibility-patches">Apply accessibility patches
                   <span class="tooltip-wrapper">
@@ -368,17 +381,84 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1-2">
+                <input id="antifreeze-mode" type="checkbox">
+                <label for="antifreeze-mode">Anti-Freeze mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Remove screen freezes on level-up, relic and vessel acquisition.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1-2">
                 <input id="show-spoilers" type="checkbox">
                 <label for="show-spoilers">Show spoilers</label>
               </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1-2">
+                <input id="mypurse-mode" type="checkbox">
+                <label for="mypurse-mode">That's my purse! mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Prevents Death from stealing your gear.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1-2">
                 <input id="show-relics" type="checkbox">
                 <label for="show-relics">Show relic locations</label>
               </div>
-              <div class="pure-u-1">
+              <div class="pure-u-1-2">
+                <input id="iws-mode" type="checkbox">
+                <label for="iws-mode">Infinite Wing Smash mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Enables infinite Wing Smash for one input.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1-2">
                 <input id="show-solutions" type="checkbox">
                 <label for="show-solutions">Show solutions</label>
+              </div>
+              <div class="pure-u-1-2">
+                <input id="fastwarp-mode" type="checkbox">
+                <label for="fastwarp-mode">Fast Warp mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Quickens warp animation when using teleporters.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1-2"></div>
+              <div class="pure-u-1-2">
+                <input id="noprologue-mode" type="checkbox">
+                <label for="noprologue-mode">No Prologue mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Removes the Prologue from being required to play. (<p style="color:red;">Will remove potential prologue rewards.</p>
+                        )
+                      </span>
+                    </span>
+                  </span>
+                </label>
               </div>
             </div>
           </fieldset>
@@ -427,6 +507,17 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>July 16, 2024</time></h3>
+      <ul>
+        <li>Added Brawler preset.</li>
+        <li>Added Infinite Wing Smash mode, Fast Warps mode, and No Prologue mode.</li>
+        <li>Adjusted options layout to ease confusion.</li>
+        <li>Added Wanderer and Tourist extensions as options to website.</li>
+        <li>Added check counts to extension descriptions.</li>
+        <li>Added generation time as an output when using spoilers in Command Line.</li>
+        <li>Added $5000 chest to items list. (May or may not appear)</li>
+        <li>Changed how Maria First Meeting room spawns removing the need to change how time attack reads for it.</li>
+      </ul>
       <h3><time>July 10, 2024</time></h3>
       <ul>
         <li>Updated Glitch to remove guaranteed Duplicator, made preset-associated items infinite, made Heart Refresh animation faster.</li>
