--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <input id="extension-equipment"
                                name="extension"
                                type="radio"
-                               value="classic">
+                               value="equipment">
                         <label for="extension-equipment">
                           Equipment
                           <span class="tooltip-wrapper">
