Updated weighting on presets and added brawler

--- a/index.html
+++ b/index.html
@@ -973,6 +973,7 @@
     <script src="build/presets/summoner.js"></script>
     <script src="build/presets/agonizetwtw.js"></script>
     <script src="build/presets/stwosafe.js"></script>
+    <script src="build/presets/brawler.js"></script>
     <script src="build/presets/open.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
