--- a/index.html
+++ b/index.html
@@ -453,8 +453,7 @@
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
                       <span>
-                        Removes the Prologue from being required to play. (<p style="color:red;">Will remove potential prologue rewards.</p>
-                        )
+                        Removes the Prologue from being required to play. <span style="color: red;">(Will remove potential prologue rewards.)</span>
                       </span>
                     </span>
                   </span>
