--- a/index.html
+++ b/index.html
@@ -506,6 +506,11 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>July 19, 2024</time></h3>
+      <ul>
+        <li>Added new seed naming scheme.</li>
+        <li>Performance enhancement: Moved preset sorting to browser JS file.</li>
+      </ul>
       <h3><time>July 16, 2024</time></h3>
       <ul>
         <li>Added Brawler preset.</li>
