Add debug mode and update changelog

--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
       <h3><time>July 19, 2024</time></h3>
       <ul>
         <li>Added new seed naming scheme.</li>
-        <li>Performance enhancement: Moved preset sorting to browser JS file.</li>
+        <li>Performance enhancement: Presets now load on demand instead of being loaded every randomization iteration.</li>
+        <li>Performance enhancement: Added debug mode foundation to Command Line.</li>
       </ul>
       <h3><time>July 16, 2024</time></h3>
       <ul>
