Logic Updates, New "Unlocked" mode, Webpage fixes
Re-added dev.sotn.io labelling from Browser.js, updated logic in presets to be more intuitive, fixed bad UX in Glitch, added Unlocked Mode which opens shortcuts.

--- a/index.html
+++ b/index.html
@@ -459,6 +459,20 @@
                   </span>
                 </label>
               </div>
+              <div class="pure-u-1-2"></div>
+              <div class="pure-u-1-2">
+                <input id="unlocked-mode" type="checkbox">
+                <label for="unlocked-mode">Unlocked mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Opens all five shortcuts in first castle and one in second castle. <span style="color: red;">(Will break logic for most presets.)</span>
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
             </div>
           </fieldset>
         </div>
@@ -506,6 +520,13 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>August 3, 2024</time></h3>
+      <ul>
+        <li>Updated logic to be more intuitive in equipment and tourist extensions.</li>
+        <li>Added new option: Unlocked Mode.</li>
+        <li>Removed zero-relic Faerie Card logic and replaced with more accessible options in Glitch.</li>
+        <li>Restored dev mode for webpage when not on SOTN.io.</li>
+      </ul>
       <h3><time>July 19, 2024</time></h3>
       <ul>
         <li>Added new seed naming scheme.</li>
@@ -602,33 +623,33 @@
       <ul>
         <li>Add Guarded O.G. preset.</li>
       </ul>
-      <h3><time>December 26, 2021</time></h3>
-      <ul>
-        <li>Add Spread relic locations extension.</li>
-        <li>Add Bat Master preset.</li>
-      </ul>
-      <h3><time>May 17, 2021</time></h3>
-      <ul>
-        <li>Use Guarded relic locations for Casual preset.</li>
-      </ul>
-      <h3><time>April 27, 2021</time></h3>
-      <ul>
-        <li>Reject disc images that are not valid, vanilla backups.</li>
-      </ul>
-      <h3><time>April 2, 2021</time></h3>
-      <ul>
-        <li>Add Gem Farmer preset.</li>
-      </ul>
-      <h3><time>March 12, 2021</time></h3>
-      <ul>
-        <li>Add O.G. preset.</li>
-      </ul>
-      <h3><time>February 27, 2021</time></h3>
-      <ul>
-        <li>Add item stats randomization.</li>
-      </ul>
       <a id="show-older" href="#older">Show older changes</a>
       <div id="older" class="hidden">
+        <h3><time>December 26, 2021</time></h3>
+        <ul>
+          <li>Add Spread relic locations extension.</li>
+          <li>Add Bat Master preset.</li>
+        </ul>
+        <h3><time>May 17, 2021</time></h3>
+        <ul>
+          <li>Use Guarded relic locations for Casual preset.</li>
+        </ul>
+        <h3><time>April 27, 2021</time></h3>
+        <ul>
+          <li>Reject disc images that are not valid, vanilla backups.</li>
+        </ul>
+        <h3><time>April 2, 2021</time></h3>
+        <ul>
+          <li>Add Gem Farmer preset.</li>
+        </ul>
+        <h3><time>March 12, 2021</time></h3>
+        <ul>
+          <li>Add O.G. preset.</li>
+        </ul>
+        <h3><time>February 27, 2021</time></h3>
+        <ul>
+          <li>Add item stats randomization.</li>
+        </ul>
         <h3><time>February 15, 2021</time></h3>
         <ul>
           <li>Add PPF output option.</li>
