--- a/index.html
+++ b/index.html
@@ -520,12 +520,15 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>August 3, 2024</time></h3>
+      <h3><time>August 8, 2024</time></h3>
       <ul>
         <li>Updated logic to be more intuitive in equipment and tourist extensions.</li>
         <li>Added new option: Unlocked Mode.</li>
         <li>Removed zero-relic Faerie Card logic and replaced with more accessible options in Glitch.</li>
         <li>Restored dev mode for webpage when not on SOTN.io.</li>
+        <li>Removed map color p[reset compatibility to fix preset options offset.</li>
+        <li>Restored pink map color to be able to be selected.</li>
+        <li>Added track exclusion from the music rando. (CLI only)</li>
       </ul>
       <h3><time>July 19, 2024</time></h3>
       <ul>
