Added new map colors
Added black and invisible

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
       <h1>Castlevania: Symphony of the Night Randomizer</h1>
       <div>
-        by Wild Mouse
+        by Wild Mouse,
         <a class="contact" href="https://twitter.com/3snow_p7im">
           <img height="16" width="16"
                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg">
@@ -23,7 +23,7 @@
         <a class="contact" href="https://twitch.tv/3snow_p7im">
           <img height="16" width="16"
                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
-	 and eldri7ch
+	      , eldri7ch
         <a class="contact" href="https://twitter.com/eldri7ch">
           <img height="16" width="16"
                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg">
@@ -31,10 +31,14 @@
         <a class="contact" href="https://twitch.tv/eldri7ch">
           <img height="16" width="16"
                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
-	 and MottZilla
+	      , MottZilla
         <a class="contact" href="https://twitch.tv/MottZilla0">
           <img height="16" width="16"
                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
+        , and SacredLucy
+        <a class="contact" href="https://twitch.tv/sacredlucyy">
+          <img height="16" width="16"
+              src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
       </div>
       <form id="form" class="pure-u-1">
         <fieldset id="output" class="pure-u-1">
@@ -528,6 +532,7 @@
         <li>Restored dev mode for webpage when not on SOTN.io.</li>
         <li>Removed map color p[reset compatibility to fix preset options offset.</li>
         <li>Restored pink map color to be able to be selected.</li>
+        <li>Added two new "colors" for the map: Black and Invisible.</li>
         <li>Added track exclusion from the music rando. (CLI only)</li>
       </ul>
       <h3><time>July 19, 2024</time></h3>
