Updated Presets and Changelog
Added all current changes to the changelog. Updated Glitch to remove soft locks and removed RLBC issue in Aperture

--- a/index.html
+++ b/index.html
@@ -524,16 +524,21 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>August 8, 2024</time></h3>
+      <h3><time>August 12, 2024</time></h3>
       <ul>
         <li>Updated logic to be more intuitive in equipment and tourist extensions.</li>
-        <li>Added new option: Unlocked Mode.</li>
-        <li>Removed zero-relic Faerie Card logic and replaced with more accessible options in Glitch.</li>
+        <li>Added new option: Unlocked Mode to open shortcuts.</li>
         <li>Restored dev mode for webpage when not on SOTN.io.</li>
-        <li>Removed map color p[reset compatibility to fix preset options offset.</li>
-        <li>Restored pink map color to be able to be selected.</li>
-        <li>Added two new "colors" for the map: Black and Invisible.</li>
-        <li>Added track exclusion from the music rando. (CLI only)</li>
+        <li>Removed map color preset compatibility to fix preset options offset. (CLI / Launcher only)</li>
+        <li>Restored pink map color to be able to be selected. (CLI / Launcher only)</li>
+        <li>Added two new "colors" for the map: Black and Invisible. (CLI / Launcher only)</li>
+        <li>Added track exclusion from the music rando. (CLI / Launcher only)</li>
+        <li>Removed error where Aperture map reveal allowed early reverse Library card.</li>
+        <li>Corrected Skinwalker logic to force early transformations.</li>
+        <li>Added Wing Smash trail color randomization provided by Bismurphy.</li>
+        <li>Removed zero-relic Faerie Card logic and replaced with more accessible options in Glitch.</li>
+        <li>Removed softlock with Maria Silver Ring cutscene in Glitch.</li>
+        <li>Fixed Glitch logic again.</li>
       </ul>
       <h3><time>July 19, 2024</time></h3>
       <ul>
