--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,7 @@
     <script src="build/presets/brawler.js"></script>
     <script src="build/presets/open.js"></script>
     <script src="build/presets/index.js"></script>
+    <script src="build/presets/first-castle.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
   </body>
