--- a/index.html
+++ b/index.html
@@ -524,6 +524,12 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>September 10, 2024</time></h3>
+      <ul>
+        <li>Added First Castle Preset.</li>
+        <li>Added Lucky Sevens Preset.</li>
+        <li>Fixed Glitch logic yet again.</li>
+      </ul>
       <h3><time>August 12, 2024</time></h3>
       <ul>
         <li>Updated logic to be more intuitive in equipment and tourist extensions.</li>
@@ -1015,6 +1021,7 @@
     <script src="build/presets/brawler.js"></script>
     <script src="build/presets/open.js"></script>
     <script src="build/presets/first-castle.js"></script>
+    <script src="build/presets/luckysevens.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
