Updated preset descriptions and fix glitch lissue
Removed Maria soft lock at Silver Ring

--- a/index.html
+++ b/index.html
@@ -477,6 +477,20 @@
                   </span>
                 </label>
               </div>
+              <div class="pure-u-1-2"></div>
+              <div class="pure-u-1-2">
+                <input id="surprise-mode" type="checkbox">
+                <label for="surprise-mode">Surprise mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        All relics are hidden behind the same sprite and palette. The player cannot tell what the relic is until they collect it.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
             </div>
           </fieldset>
         </div>
@@ -528,6 +542,7 @@
       <ul>
         <li>Added First Castle Preset.</li>
         <li>Added Lucky Sevens Preset.</li>
+        <li>Added Surprise mode to hide relic's true identity until collected.</li>
         <li>Fixed Glitch logic yet again.</li>
       </ul>
       <h3><time>August 12, 2024</time></h3>
