Enemy Stat Randomizer

--- a/index.html
+++ b/index.html
@@ -491,6 +491,20 @@
                   </span>
                 </label>
               </div>
+              <div class="pure-u-1-2"></div>
+              <div class="pure-u-1-2">
+                <input id="enemyStatRando-mode" type="checkbox">
+                <label for="enemyStatRando-mode">Enemy Stat Randomizer mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Enemy stats are randomized ranging from 25% to 200% of their original value and their attack and defense types are randomized to include random elements.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
             </div>
           </fieldset>
         </div>
@@ -543,6 +557,8 @@
         <li>Added First Castle Preset.</li>
         <li>Added Lucky Sevens Preset.</li>
         <li>Added Surprise mode to hide relic's true identity until collected.</li>
+        <li>Added Enemy Stat Randomizer mode to randomize enemy stats like attack, defense, and HP.</li>
+        <li>Updated preset descriptions to do their job better.</li>
         <li>Fixed Glitch logic yet again.</li>
       </ul>
       <h3><time>August 12, 2024</time></h3>
