Made Presets Mandatory
Updated browser.js and index.html to require presets to be selected solving broken seed generation for custom seeds

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <input id="seed" type="text" placeholder="Optional">
               </div>
               <div class="pure-u-12-24">
-                <input id="preset" type="checkbox">
+                <input id="preset" type="checkbox"disabled checked>
                 <label for="preset">Preset</label>
               </div>
               <div id="preset-select" class="pure-u-12-24">
@@ -94,7 +94,7 @@
                   </span>
                 </span>
               </div>
-              <fieldset id="options" class="hidden">
+              <fieldset id="options">
                 <div class="pure-g">
                   <div class="pure-u-12-24">
                     <label for="complexity">Complexity</label>
