Update to options enemyDrops, prologueRewards, itemLocations and startingEquipment

--- a/index.html
+++ b/index.html
@@ -110,23 +110,7 @@
                         </span>
                       </span>
                     </span>
-                  </div>
-                  <div class="pure-u-12-24">
-                    <input id="starting-equipment" type="checkbox" disabled>
-                    <label for="starting-equipment">Starting equipment</label>
-                    <span class="tooltip-wrapper">
-                      <span class="tooltip-indicator">?</span>
-                      <span class="tooltip hidden">
-                        <span>
-                        <span style="color: red;">*Disabled because breaks presets with guaranteed starting gear.</span>
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                  <div class="pure-u-12-24">
-                    <input id="prologue-rewards" type="checkbox">
-                    <label for="prologue-rewards">Prologue rewards</label>
-                  </div>                         
+                  </div>                       
                   <div class="pure-u-12-24">
                     <fieldset id="relic-locations-set">
                       <legend>
@@ -272,8 +256,7 @@
                          style="display: none">
                 </div>
               </fieldset>
-              <div class="pure-u-1">
-                <input id="clear"
+              <div class="pure-u-1">                <input id="clear"
                        type="submit"
                        class="pure-button hidden"
                        value="Clear">
@@ -508,6 +491,16 @@
               <div class="pure-u-12-24">
                 <input id="item-locations" type="checkbox">
                 <label for="item-locations">Item locations</label>
+              </div>
+              <div class="pure-u-1-2"></div>
+              <div class="pure-u-12-24">
+                <input id="starting-equipment" type="checkbox" disabled>
+                <label for="starting-equipment">Starting equipment</label>
+              </div>
+              <div class="pure-u-1-2"></div>
+              <div class="pure-u-12-24">
+                <input id="prologue-rewards" type="checkbox">
+                <label for="prologue-rewards">Prologue rewards</label>
               </div>
             </div>
           </fieldset>
