Update Change Log

--- a/index.html
+++ b/index.html
@@ -556,6 +556,11 @@
         <li>Added Surprise mode to hide relic's true identity until collected.</li>
         <li>Added Enemy Stat Randomizer mode to randomize enemy stats like attack, defense, and HP.</li>
         <li>Updated preset descriptions to do their job better.</li>
+        <li>Updated website animations in and out of Menu Mode.</li>
+        <li>Moved Starting Equipment, Enemy Drops, Item Location, Turkey Mode, Item Stats and Prologue Rewards to the Options section.</li>
+        <li>Choosing presets on site will now check boxes of options used in preset files.</li>
+        <li>Certain presets on sitw will disable incompatible options.</li>
+        <li>Formatting updates.</li>
         <li>Fixed Glitch logic yet again.</li>
       </ul>
       <h3><time>August 12, 2024</time></h3>
