--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         <li>Updated website animations in and out of Menu Mode.</li>
         <li>Moved Starting Equipment, Enemy Drops, Item Location, Turkey Mode, Item Stats and Prologue Rewards to the Options section.</li>
         <li>Choosing presets on site will now check boxes of options used in preset files.</li>
-        <li>Certain presets on sitw will disable incompatible options.</li>
+        <li>Certain presets on site will disable incompatible options.</li>
         <li>Formatting updates.</li>
         <li>Fixed Glitch logic yet again.</li>
       </ul>
