--- a/index.html
+++ b/index.html
@@ -526,8 +526,6 @@
       </form>
       <div id="notification"><span>Copied to clipboard<span></div>
       <hr>
-      <h2><a name="version">Version 3.16.0</a></h2>
-      <hr>
       <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
@@ -549,6 +547,15 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>October 14, 2024</time></h3>
+      <ul>
+        <li>Updated First Castle Preset with a new instant teleport to Dracula.</li>
+        <li>Moved the former "Black Marble Vats" check in Wanderer and Tourist to "Reverse Alucart Sword". This removes a potential corruption when items spawn at the location and adds a Cube of Zoe check to second castle.</li>
+        <li>Updated Open preset to actually be open by opening the Colosseum and Olrox's Quarters shortcuts connecting them to Royal Chapel.</li>
+        <li>Updated Skinwalker preset file to actually use the Wanderer extension.</li>
+        <li>Removed large version number from website.</li>
+        <li>Glitch will be fixed one day.</li>
+      </ul>
       <h3><time>September 10, 2024</time></h3>
       <ul>
         <li>Added First Castle Preset.</li>
