Update preset weighting and add Spellbound and Mobility

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <img height="16" width="16"
                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
 	      , eldri7ch
-        <a class="contact" href="https://twitter.com/eldri7ch">
+        <a class="contact" href="https://bsky.app/profile/eldri7ch.bsky.social">
           <img height="16" width="16"
-               src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg">
+               src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/bluesky.svg">
         </a>
         <a class="contact" href="https://twitch.tv/eldri7ch">
           <img height="16" width="16"
@@ -1105,6 +1105,8 @@
     <script src="build/presets/sightseer.js"></script>
     <script src="build/presets/cursed-night.js"></script>
     <script src="build/presets/glitchmaster.js"></script>
+    <script src="build/presets/mobility.js"></script>
+    <script src="build/presets/spellbound.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
