--- a/index.html
+++ b/index.html
@@ -1102,11 +1102,12 @@
     <script src="build/presets/open.js"></script>
     <script src="build/presets/first-castle.js"></script>
     <script src="build/presets/luckysevens.js"></script>
-    <script src="build/presets/sightseer.js"></script>
+    <script src="build/presets/sight-seer.js"></script>
     <script src="build/presets/cursed-night.js"></script>
     <script src="build/presets/glitchmaster.js"></script>
     <script src="build/presets/mobility.js"></script>
     <script src="build/presets/spellbound.js"></script>
+    <script src="build/presets/dog-life.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
