Multiple error fixes and changelog notes.

--- a/index.html
+++ b/index.html
@@ -582,9 +582,13 @@
         <li>Added Glitchmaster Preset.</li>
         <li>Added Sight-Seer Preset.</li>
         <li>Added new Shop Price Randomizer option.</li>
-        <li>Incorporated Enemy Stat Randomizer into Chaos Lite</li>
-        <li>Incorporated Shop Price Randomizer into Chaos Lite</li>
+        <li>Added four $700 bags and one $5000 chest to candle randomization.</li>
+        <li>Incorporated Enemy Stat Randomizer into Chaos Lite.</li>
+        <li>Incorporated Shop Price Randomizer into Chaos Lite.</li>
+        <li>Removed guaranteed $400 drop from Rat Race.</li>
         <li>Fixed an error in relic placement in Forge.</li>
+        <li>Fixed an error in logic in Speedrun.</li>
+        <li>Fixed an error in logic in Adventure.</li>
         <li>Re-re-re-re fixed Glitch logic.</li>
       </ul>
       <h3><time>October 14, 2024</time></h3>
