--- a/index.html
+++ b/index.html
@@ -581,6 +581,8 @@
         <li>Added Cursed Night Preset.</li>
         <li>Added Glitchmaster Preset.</li>
         <li>Added Sight-Seer Preset.</li>
+	<li>Added Mobility Preset.</li>
+	<li>Added Spellbound Preset.</li>
         <li>Added new Shop Price Randomizer option.</li>
         <li>Added four $700 bags and one $5000 chest to candle randomization.</li>
         <li>Incorporated Enemy Stat Randomizer into Chaos Lite.</li>
