Added full Starting Room Rando Mode

--- a/index.html
+++ b/index.html
@@ -525,7 +525,21 @@
                 <input id="starting-equipment" type="checkbox" disabled>
                 <label for="starting-equipment">Starting equipment</label>
               </div>
-              <div class="pure-u-1-2"></div>
+              <div class="pure-u-1-2">
+                <input id="startRoomRando-mode" type="checkbox">
+                <label for="startRoomRando-mode">Starting Room Randomizer Mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Start in the entrance as usual but after the first Warg, 
+                        you are teleported to a random zone to start the rest of 
+                        your run.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
               <div class="pure-u-12-24">
                 <input id="prologue-rewards" type="checkbox">
                 <label for="prologue-rewards">Prologue rewards</label>
@@ -582,6 +596,7 @@
         <li>Added new starting equipment for Cursed Night preset.</li>
         <li>Updated preset descriptions.</li>
         <li>Set ground work for website re-design.</li>
+        <li>Corrected an error when trying to apply Shop Price Rando.</li>
         <li>Reticulated Glitch logic splines.</li>
       </ul>
       <a id="show-older" href="#older">Show older changes</a>
